--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.3.8",
     "vue": "^2.5.2",
+    "vue-draggable-resizable": "^1.7.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
